refactored and finished dragging behaviour on directory contents, folder structure and from other windows, interactive path missing!!

--- a/client/index.html
+++ b/client/index.html
@@ -59,7 +59,7 @@
 			</nav>
 			<main id="body">
 				<section id="folder-structure"></section>
-				<section id="directory-contents">
+				<section id="directory-contents" class="drag-container">
 					<div id="contents"></div>
 				</section>
 			</main>
@@ -228,7 +228,7 @@
 		</template>
 		<template id="folder-structure-folder-template">
 			<div class="collapsable-folder-structure-element">
-				<header class="head element" data-drag-class="out">
+				<header class="head element">
 					<p class="path" hidden></p>
 					<div class="expand-icon icon" title="Expand">
 						<svg xmlns="http://www.w3.org/2000/svg">
@@ -256,7 +256,7 @@
 			</div>
 		</template>
 		<template id="directory-content-file-template">
-			<div class="element file" data-drag-class="in">
+			<div class="element file">
 				<p class="path" hidden></p>
 				<div class="file-icon icon">
 					<div class="background">
@@ -279,7 +279,7 @@
 			</div>
 		</template>
 		<template id="directory-content-folder-template">
-			<div class="element folder" data-drag-class="in">
+			<div class="element folder">
 				<p class="path" hidden></p>
 				<div class="folder-icon icon">
 					<div class="back">
