added hidden `.path` element on interactive path component that contains the full relative path

--- a/client/index.html
+++ b/client/index.html
@@ -224,6 +224,7 @@
 					</svg>
 				</div>
 				<p class="value element"></p>
+				<p class="path" hidden></p>
 			</div>
 		</template>
 		<template id="folder-structure-folder-template">
