fixed css folder icon issues

--- a/client/index.html
+++ b/client/index.html
@@ -215,6 +215,24 @@
 			</footer>
 		</nav> -->
 
+		<div id="drag-icon">
+			<div class="folder-icon icon">
+				<div class="back">
+					<span class="top"></span>
+					<span class="triangle"></span>
+					<span class="basic"></span>
+				</div>
+				<span class="front"></span>
+			</div>
+			<div class="file-icon icon">
+				<div class="background">
+					<div class="dog-ear">
+						<div class="negative">
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 		<template id="interactive-path-component-template">
 			<div class="interactive-path-component">
 				<div class="icon">
