--- a/client/index.html
+++ b/client/index.html
@@ -4,8 +4,12 @@
 		<meta charset="UTF-8" />
 		<title>File Server</title>
 
+		<script src="https://cdn.jsdelivr.net/npm/pace-js@latest/pace.min.js"></script>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pace-js@latest/pace-theme-default.min.css">
+
 		<link rel="icon" href="/assets/favicon.svg" type="image/svg+xml">
 
+		<link href="/css/pace-page-progress-bar.css" rel="stylesheet" />
 		<link href="/css/general.css" rel="stylesheet" />
 		<link href="/css/interactive-path.css" rel="stylesheet" />
 		<link href="/css/drop-overlay.css" rel="stylesheet" />
