fixed css issues; fixed uploading issues on server-side; directory contents are now sorted (folders first); fixed issues with special chars, now every path gets `decoded`

--- a/client/index.html
+++ b/client/index.html
@@ -290,14 +290,21 @@
 					</div>
 				</div>
 				<p class="name"></p>
-				<p class="extension"></p>
 				<p class="size"></p>
-				<div class="download-icon icon" title="Download">
-					<a></a>
-					<svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
-						<path
-							d="M6 20q-.825 0-1.412-.587Q4 18.825 4 18v-3h2v3h12v-3h2v3q0 .825-.587 1.413Q18.825 20 18 20Zm6-4-5-5 1.4-1.45 2.6 2.6V4h2v8.15l2.6-2.6L17 11Z" />
-					</svg>
+				<div class="icons">
+					<div class="download-icon icon" title="Download">
+						<a></a>
+						<svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
+							<path
+								d="M6 20q-.825 0-1.412-.587Q4 18.825 4 18v-3h2v3h12v-3h2v3q0 .825-.587 1.413Q18.825 20 18 20Zm6-4-5-5 1.4-1.45 2.6 2.6V4h2v8.15l2.6-2.6L17 11Z" />
+						</svg>
+					</div>
+					<div class="delete-icon icon" title="Delete">
+						<svg xmlns="http://www.w3.org/2000/svg">
+							<path
+								d="M7 21q-.825 0-1.412-.587Q5 19.825 5 19V6H4V4h5V3h6v1h5v2h-1v13q0 .825-.587 1.413Q17.825 21 17 21ZM17 6H7v13h10ZM9 17h2V8H9Zm4 0h2V8h-2ZM7 6v13Z" />
+						</svg>
+					</div>
 				</div>
 			</div>
 		</template>
@@ -313,11 +320,21 @@
 					<span class="front"></span>
 				</div>
 				<p class="name"></p>
-				<div class="delete-icon icon" title="Delete">
-					<svg xmlns="http://www.w3.org/2000/svg">
-						<path
-							d="M7 21q-.825 0-1.412-.587Q5 19.825 5 19V6H4V4h5V3h6v1h5v2h-1v13q0 .825-.587 1.413Q17.825 21 17 21ZM17 6H7v13h10ZM9 17h2V8H9Zm4 0h2V8h-2ZM7 6v13Z" />
-					</svg>
+				<div class="icons">
+
+					<div class="download-icon icon" title="Download">
+						<a></a>
+						<svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
+							<path
+								d="M6 20q-.825 0-1.412-.587Q4 18.825 4 18v-3h2v3h12v-3h2v3q0 .825-.587 1.413Q18.825 20 18 20Zm6-4-5-5 1.4-1.45 2.6 2.6V4h2v8.15l2.6-2.6L17 11Z" />
+						</svg>
+					</div>
+					<div class="delete-icon icon" title="Delete">
+						<svg xmlns="http://www.w3.org/2000/svg">
+							<path
+								d="M7 21q-.825 0-1.412-.587Q5 19.825 5 19V6H4V4h5V3h6v1h5v2h-1v13q0 .825-.587 1.413Q17.825 21 17 21ZM17 6H7v13h10ZM9 17h2V8H9Zm4 0h2V8h-2ZM7 6v13Z" />
+						</svg>
+					</div>
 				</div>
 			</div>
 		</template>
