--- a/src/client/common/index.html
+++ b/src/client/common/index.html
@@ -7,8 +7,7 @@
     </head>
 
     <body>
-        <script src="load.js"></script>
-        <script src="/out/client/common/ui/Part.js" type="module"></script>
+        <script src="/out/client/common/load.js" type="module"></script>
     </body>
 
 </html>
