--- a/src/client/common/index.html
+++ b/src/client/common/index.html
@@ -4,10 +4,18 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <link rel="stylesheet" href="/src/client/common/ui/components/DOM.css">
+        <link rel="stylesheet" href="/src/client/common/ui/components/roundedContainer/RoundedContainer.css">
+        <link rel="stylesheet"
+            href="/src/client/common/ui/components/directoryContentsCollection/DirectoryContentsCollection.css">
+        <link rel="stylesheet"
+            href="/src/client/common/ui/components/directoryContentsCollection/DirectoryContentElement.css">
+
+        <script src="/out/src/client/common/load.js" type="module"></script>
     </head>
 
     <body>
-        <script src="/out/client/common/load.js" type="module"></script>
     </body>
 
 </html>
