started implementing a `GridColumnOrderBar` whose parent will be a `DirectoryContentsCollection`. It will manage the order in which the `DirectoryContentElement` components (name, date, size) are being displayed.

--- a/src/client/common/index.html
+++ b/src/client/common/index.html
@@ -11,8 +11,11 @@
             href="/src/client/common/ui/components/directoryContentsCollection/DirectoryContentsCollection.css">
         <link rel="stylesheet"
             href="/src/client/common/ui/components/directoryContentsCollection/DirectoryContentElement.css">
+        <link rel="stylesheet"
+            href="/src/client/common/ui/components/directoryContentsCollection/GridColumnOrderBar.css">
 
-        <script src="/out/src/client/common/load.js" type="module"></script>
+        <script src="/out/src/client/common/load.js" type="module">
+        </script>
     </head>
 
     <body>
