fixed bug when dragging columns; added themes, refactored drag code

--- a/src/client/common/index.html
+++ b/src/client/common/index.html
@@ -13,7 +13,7 @@
             href="/src/client/common/ui/components/directoryContentsCollection/DirectoryContentElement.css">
         <link rel="stylesheet"
             href="/src/client/common/ui/components/directoryContentsCollection/gridColumnOrderBar/GridColumnOrderBar.css">
-
+        <link rel="stylesheet" href="/src/client/common/ui/themes.css">
         <script src="/out/src/client/common/load.js" type="module">
         </script>
     </head>
