added svg icons for download and delete on `DirectoryContentElement`; added `SideBySide` and `DirectoryTree` components.

--- a/src/client/common/index.html
+++ b/src/client/common/index.html
@@ -14,6 +14,9 @@
         <link rel="stylesheet"
             href="/src/client/common/ui/components/directoryContentsCollection/gridColumnOrderBar/GridColumnOrderBar.css">
         <link rel="stylesheet" href="/src/client/common/ui/themes.css">
+        <link rel="stylesheet" href="/src/client/common/ui/components/directoryTree/DirectoryTree.css">
+        <link rel="stylesheet" href="/src/client/common/ui/components/SideBySide.css">
+
         <script src="/out/src/client/common/load.js" type="module">
         </script>
     </head>
