--- a/src/client/common/index.html
+++ b/src/client/common/index.html
@@ -16,6 +16,7 @@
         <link rel="stylesheet" href="/src/client/common/ui/themes.css">
         <link rel="stylesheet" href="/src/client/common/ui/components/directoryTree/DirectoryTree.css">
         <link rel="stylesheet" href="/src/client/common/ui/components/SideBySide.css">
+        <link rel="stylesheet" href="/src/client/common/ui/components/directoryContentsCollection/FolderIcon.css">
 
         <script src="/out/src/client/common/load.js" type="module">
         </script>
