added `OpenInNewTabIcon`; made `CollapsableDirectoryTreeItem` collapsable; updated css styles; now taking the parent elements position in account when dragging a `DraggableGridColumnHeader`

--- a/src/client/common/index.html
+++ b/src/client/common/index.html
@@ -17,6 +17,7 @@
         <link rel="stylesheet" href="/src/client/common/ui/components/directoryTree/DirectoryTree.css">
         <link rel="stylesheet" href="/src/client/common/ui/components/SideBySide.css">
         <link rel="stylesheet" href="/src/client/common/ui/components/directoryContentsCollection/FolderIcon.css">
+        <link rel="stylesheet" href="/src/client/common/ui/components/directoryTree/CollapsableDirectoryTreeItem.css">
 
         <script src="/out/src/client/common/load.js" type="module">
         </script>
