--- a/src/client/common/index.html
+++ b/src/client/common/index.html
@@ -18,6 +18,7 @@
         <link rel="stylesheet" href="/src/client/common/ui/components/SideBySide.css">
         <link rel="stylesheet" href="/src/client/common/ui/components/directoryContentsCollection/FolderIcon.css">
         <link rel="stylesheet" href="/src/client/common/ui/components/directoryTree/CollapsableDirectoryTreeItem.css">
+        <link rel="stylesheet" href="/src/client/common/ui/components/contextMenus/ContextMenu.css">
 
         <script src="/out/src/client/common/load.js" type="module">
         </script>
