switched to `parcel`: - removed ts and concurrently - added `parceljs` and `flow` - changes path aliases - updated paths

--- a/src/client/common/index.html
+++ b/src/client/common/index.html
@@ -5,22 +5,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="/src/client/common/ui/components/DOM.css">
-        <link rel="stylesheet" href="/src/client/common/ui/components/roundedContainer/RoundedContainer.css">
-        <link rel="stylesheet"
-            href="/src/client/common/ui/components/directoryContentsCollection/DirectoryContentsCollection.css">
-        <link rel="stylesheet"
-            href="/src/client/common/ui/components/directoryContentsCollection/DirectoryContentElement.css">
-        <link rel="stylesheet"
-            href="/src/client/common/ui/components/directoryContentsCollection/gridColumnOrderBar/GridColumnOrderBar.css">
-        <link rel="stylesheet" href="/src/client/common/ui/themes.css">
-        <link rel="stylesheet" href="/src/client/common/ui/components/directoryTree/DirectoryTree.css">
-        <link rel="stylesheet" href="/src/client/common/ui/components/SideBySide.css">
-        <link rel="stylesheet" href="/src/client/common/ui/components/directoryContentsCollection/FolderIcon.css">
-        <link rel="stylesheet" href="/src/client/common/ui/components/directoryTree/CollapsableDirectoryTreeItem.css">
-        <link rel="stylesheet" href="/src/client/common/ui/components/contextMenus/ContextMenu.css">
-
-        <script src="/out/src/client/common/load.js" type="module">
+        <link rel="stylesheet" href="index.css">
+        <script src="index.ts" type="module">
         </script>
     </head>
 
