--- a/src/client/common/index.html
+++ b/src/client/common/index.html
@@ -6,8 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link rel="stylesheet" href="index.css">
-        <script src="index.ts" type="module">
-        </script>
+        <script src="index.ts" type="module"></script>
     </head>
 
     <body>
