--- a/client/index.html
+++ b/client/index.html
@@ -5,8 +5,7 @@
 		<title>File Server</title>
 
 		<script src="https://cdn.jsdelivr.net/npm/pace-js@latest/pace.min.js"></script>
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pace-js@latest/pace-theme-default.min.css">
-
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pace-js@latest/pace-theme-default.min.cs
 		<link rel="icon" href="/assets/favicon.svg" type="image/svg+xml">
 
 		<link href="/css/pace-page-progress-bar.css" rel="stylesheet" />
